created some more db schemas + did the linking between schema

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "dependencies": {
         "express": "^4.17.3",
+        "mongodb": "^4.4.1",
         "mongoose": "^6.2.7",
         "socket.io": "^4.4.1"
     }
