--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "description": "",
     "dependencies": {
+        "ejs": "^3.1.6",
         "express": "^4.17.3",
         "mongodb": "^4.4.1",
         "mongoose": "^6.2.7",
