--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "version": "0.0.1",
     "description": "",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.20.0",
         "ejs": "^3.1.6",
         "express": "^4.17.3",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.4.1",
         "mongoose": "^6.2.7",
         "socket.io": "^4.4.1"
