--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
         "express": "^4.17.3",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^4.4.1",
-        "mongoose": "^6.2.7",
-        "socket.io": "^4.4.1"
+        "mongoose": "^6.2.7"
     }
 }
